--- a/EmployeeManagement/src/app/app.component.css
+++ b/EmployeeManagement/src/app/app.component.css
@@ -42,12 +42,18 @@ app {
 }
 .main {
     flex: 1;
+    position: relative;
+    
 }
-
+.top-nav-bar{
+    flex-direction: row-reverse;
+    background-color: #2B62A0 !important
+}
     .main .top-row {
         background-color: #f7f7f7;
         border-bottom: 1px solid #d6d5d5;
         justify-content: flex-end;
+       
     }
 
         .main .top-row > a, .main .top-row .btn-link {
@@ -133,11 +139,11 @@ app {
         display: grid;
         
      grid-template-rows: 50px  auto 40px;
-       grid-template-columns: 60px auto;
+       grid-template-columns: 0px auto;
         grid-template-areas:
-        "nav header "
+        "header header "
         "nav content "
-        "nav footer ";
+        "footer footer ";
         height: 100vh;
     }
 
@@ -147,18 +153,19 @@ app {
     } */
 
     .footer{
-        grid-area: footer;
+     grid-area: footer;
     background-color:#2BB961;
     color: white;
     text-align: center;
     padding: 10px 0;
     }
     .header{
-       background-color:  rgba(0,0,0,.075);
+       /* background-color:  rgba(0,0,0,.075); */
         color: white;
         font-size: 14px;
         grid-area: header;
         text-align: center;
+        flex-direction: row;
         /* background-color: #FA7D44; */
     }
     .main
@@ -179,15 +186,15 @@ app {
 
     .wt-60 {
         /* width:60px; */
-        grid-template-columns: 60px auto !important;
+        grid-template-columns: 0px auto !important;
         transition:0.6s;
         }
         .wt-180 {
-            grid-template-columns: 180px auto !important;
+            grid-template-columns: 220px auto !important;
             /* width: 250px; */
             transition: 0.6s;
         }
-   
+  
 }
 
 
